samples/_failures_safe/1761276979_9d9115_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b967ab1a.c: In function ‘main’:
./samples/SAFE/__tmp_b967ab1a.c:182:13: error: expected declaration or statement at end of input
  182 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_b967ab1a.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b967ab1a.c:182:13: error: expected declaration or statement at end of input
